--- a/sass/blocks/_activities.sass
+++ b/sass/blocks/_activities.sass
@@ -1,5 +1,6 @@
 .activities
   background-color: #F5FAFE
+  overflow: hidden
   &__container
     padding: 62px 0 98px 0
   &-title
