--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -1,5 +1,6 @@
 .hotel
   background-color: #F5FAFE
+  overflow: hidden
   &__container
     padding: 19px 0 70px 0
   &-info
