--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -1,5 +1,6 @@
 .newsletter
   position: relative
+  overflow: hidden
   &::before
     content: ""
     position: absolute
