--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -1,5 +1,6 @@
 .packages
   background-color: #F5FAFE
+  overflow: hidden
   &__container
     padding: 43px 0 70px 0px
   &__title
