--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -9,6 +9,7 @@
 
 .reviews
   background-color: #F5FAFE
+  overflow: hidden
   &-container
     padding: 42px 0 70px 0
     text-align: center
